--- a/WeatherApp/Services/Services.csproj
+++ b/WeatherApp/Services/Services.csproj
@@ -76,11 +76,15 @@
     <Compile Include="DTO\WeatherInCity\Sys.cs" />
     <Compile Include="DTO\WeatherInCity\Weather.cs" />
     <Compile Include="DTO\WeatherInCity\Wind.cs" />
+    <Compile Include="Events\CityWeatherRequestSentEvent.cs" />
+    <Compile Include="Interfaces\ILocalStorageService.cs" />
     <Compile Include="Interfaces\IWeatherSevice.cs" />
+    <Compile Include="RecentCities.cs" />
+    <Compile Include="Service\LocalStorageService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RestClient.cs" />
     <Compile Include="ServicesModule.cs" />
-    <Compile Include="WeatherSevice.cs" />
+    <Compile Include="Service\WeatherSevice.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
