--- a/WeatherApp/Modules/WeatherModule/WeatherModule.csproj
+++ b/WeatherApp/Modules/WeatherModule/WeatherModule.csproj
@@ -253,7 +253,7 @@
     <Resource Include="Resources\Icons\WeatherIcons\906n.png" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Services\Services.csproj">
+    <ProjectReference Include="..\..\WeatherApi\Services\Services.csproj">
       <Project>{EA9242A7-1B5C-47EB-9A66-36C36B093923}</Project>
       <Name>Services</Name>
     </ProjectReference>
