--- a/WeatherApp/WeatherApi/Services.Portable/Services.Portable.csproj
+++ b/WeatherApp/WeatherApi/Services.Portable/Services.Portable.csproj
@@ -49,6 +49,7 @@
     <Compile Include="DTO\Api\WeatherDetails\Wind.cs" />
     <Compile Include="DTO\Api\WeatherForecast\WeatherForecastItem.cs" />
     <Compile Include="DTO\CityItem.cs" />
+    <Compile Include="DTO\Coordinates.cs" />
     <Compile Include="Exceptions\ApiErrorException.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
