--- a/WeatherApp/Apps/Weather.Android/Properties/AndroidManifest.xml
+++ b/WeatherApp/Apps/Weather.Android/Properties/AndroidManifest.xml
@@ -4,5 +4,8 @@
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+	<uses-permission android:name="android.permission.DIAGNOSTIC" />
+	<uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
+	<uses-permission android:name="android.permission.SET_DEBUG_APP" />
 	<application android:label="Weather" android:icon="@drawable/Icon"></application>
 </manifest>
