--- a/WeatherApp/Apps/Weather.Android/Properties/AndroidManifest.xml
+++ b/WeatherApp/Apps/Weather.Android/Properties/AndroidManifest.xml
@@ -7,5 +7,6 @@
 	<uses-permission android:name="android.permission.DIAGNOSTIC" />
 	<uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
 	<uses-permission android:name="android.permission.SET_DEBUG_APP" />
+	<uses-permission android:name="android.permission.INTERNET" />
 	<application android:label="Weather" android:icon="@drawable/Icon"></application>
 </manifest>
