--- a/WeatherApp/Apps/Weather.Android/Properties/AndroidManifest.xml
+++ b/WeatherApp/Apps/Weather.Android/Properties/AndroidManifest.xml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="Weather.Android" android:versionCode="1" android:versionName="1.0" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="17" android:targetSdkVersion="17" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -8,5 +8,7 @@
 	<uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
 	<uses-permission android:name="android.permission.SET_DEBUG_APP" />
 	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<application android:label="Weather" android:icon="@drawable/Icon"></application>
 </manifest>
