--- a/WeatherApp/Apps/Weather.Android/Properties/AndroidManifest.xml
+++ b/WeatherApp/Apps/Weather.Android/Properties/AndroidManifest.xml
@@ -10,5 +10,8 @@
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.DELETE_PACKAGES" />
+	<uses-permission android:name="android.permission.INSTALL_PACKAGES" />
+	<uses-permission android:name="android.permission.RESTART_PACKAGES" />
 	<application android:label="Weather" android:icon="@drawable/Icon"></application>
 </manifest>
