--- a/WeatherApp/Apps/Weather.Android/packages.config
+++ b/WeatherApp/Apps/Weather.Android/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="HockeySDK.Xamarin" version="4.1.0-beta3" targetFramework="monoandroid44" />
+  <package id="Xamarin.UITest" version="1.3.9" targetFramework="monoandroid42" />
 </packages>
