--- a/WeatherApp/Apps/Weather.Android/Properties/AndroidManifest.xml
+++ b/WeatherApp/Apps/Weather.Android/Properties/AndroidManifest.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="Weather.Android" android:versionCode="1" android:versionName="1.0" android:installLocation="internalOnly">
 	<uses-sdk android:minSdkVersion="17" android:targetSdkVersion="17" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
