--- a/WeatherApp/Apps/Weather.Android/packages.config
+++ b/WeatherApp/Apps/Weather.Android/packages.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="3.5.2" targetFramework="monoandroid42" />
+  <package id="Autofac.Extras.CommonServiceLocator" version="4.0.0" targetFramework="monoandroid42" />
+  <package id="CommonServiceLocator" version="1.3" targetFramework="monoandroid42" />
   <package id="HockeySDK.Xamarin" version="4.1.0-beta3" targetFramework="monoandroid44" />
-  <package id="NUnit" version="2.6.4" targetFramework="monoandroid42" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="monoandroid42" />
+  <package id="Xamarin.Android.Support.v4" version="23.4.0" targetFramework="monoandroid42" />
+  <package id="Xamarin.Android.Support.v7.RecyclerView" version="23.4.0" targetFramework="monoandroid42" />
 </packages>
